Updated code with chatbot suggestions and enter key after submitting a suggestion it will remove the popup menu